@@ -1,4 +1,4 @@
-/* $Id: Logging.txt,v 1.2 2001-11-22 11:48:55 phaller Exp $ */
+/* $Id: Logging.txt,v 1.3 2004-12-20 18:11:09 sao2l02 Exp $ */
 
             	Odin Logging and Profiling
             	~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -52,7 +52,292 @@ Disable logging for kernel32, but enable it for profile.cpp & wprocess.cpp
 
 Enable logging for kernel32, but disable it for profile.cpp & wprocess.cpp
 	set dbg_kernel32=+dll -profile -wprocess
-
+This works currently for this dlls.
+gdi32 with this source file names
+"gdi32",
+"opengl",
+"callback",
+"dibsect",
+"initterm",
+"resource",
+"oslibgdi",
+"font",
+"text",
+"palette",
+"line",
+"oslibgpi",
+"region",
+"metafile",
+"dibitmap",
+"blit",
+"rgbcvt",
+"objhandle",
+"transform",
+"printer",
+"icm",
+"trace",
+"fontres",
+"devcontext"
+kernel32 with this source file names
+"kernel32",
+"kobjects",
+"console",
+"conin",
+"conbuffer",
+"conout",
+"network",
+"hmdevio",
+"profile",
+"thread",
+"virtual",
+"thunk",
+"obsolete",
+"comm",
+"message",
+"resource",
+"exceptions",
+"heapshared",
+"cpuhlp",
+"heapcode",
+"lfile",
+"npipe",
+"oslibdos",
+"oslibmisc",
+"misc",
+"exceptutil",
+"lang",
+"iccio",
+"map",
+"win32util",
+"heap",
+"heapstring",
+"os2heap",
+"vmutex",
+"initterm",
+"handlemanager",
+"environ",
+"initsystem",
+"hmdevice",
+"hmopen32",
+"hmobjects",
+"hmevent",
+"hmmutex",
+"hmcomm",
+"hmsemaphore",
+"wprocess",
+"conprop",
+"conprop2",
+"winimagelx",
+"winimagebase",
+"windllbase",
+"winexebase",
+"time",
+"mmap",
+"winimagepe2lx",
+"winimagepeldr",
+"windllpe2lx",
+"windlllx",
+"windllpeldr",
+"winexepe2lx",
+"winexelx",
+"winexepeldr",
+"winres",
+"critsection",
+"pefile",
+"winimgres",
+"wintls",
+"async",
+"fileio",
+"hmtoken",
+"kernelrsrc",
+"atom",
+"disk",
+"directory",
+"cvtbitmap",
+"hmmmap",
+"cvtaccel",
+"cvticon",
+"cvticongrp",
+"oslibexcept",
+"cpu",
+"process",
+"cvtcursor",
+"cvtcursorgrp",
+"stubs",
+"interlock",
+"toolhelp",
+"codepage",
+"debug",
+"oslibdebug",
+"registry",
+"queue",
+"hmthread",
+"hmprocess",
+"vsemaphore",
+"exceptstackdump",
+"hmfile",
+"hmnpipe",
+"hmdisk",
+"version",
+"hmstd",
+"module",
+"mailslot",
+"hmmailslot",
+"hmparport",
+"hmnul",
+"overlappedio",
+"trace",
+"event",
+"mutex",
+"semaphore",
+"nls",
+"memory",
+"system",
+"string",
+"char",
+"osliblvm",
+"oslibtime",
+"conodin32",
+"oslibmem",
+"mmapview",
+"mmapdup",
+"oslibthread",
+"mmapnotify"
+user32 with this source file names
+"user32",
+"loadres",
+"dde",
+"win32wndhandle",
+"wsprintf",
+"winmouse",
+"icon",
+"hook",
+"winkeyboard",
+"defwndproc",
+"syscolor",
+"char",
+"initterm",
+"uitools",
+"unknown",
+"spy",
+"wndmsg",
+"display",
+"pmwindow",
+"pmframe",
+"win32class",
+"win32wnd",
+"win32dlg",
+"msgbox",
+"window",
+"windowmsg",
+"windowclass",
+"win32wbase",
+"windowword",
+"gen_object",
+"oslibwin",
+"win32wndchild",
+"controls",
+"button",
+"static",
+"scroll",
+"listbox",
+"menu",
+"combo",
+"edit",
+"winswitch",
+"icontitle",
+"clipboard",
+"winicon",
+"win32wmdiclient",
+"oslibutil",
+"oslibmsg",
+"dib",
+"oslibdos",
+"win32wmdichild",
+"wingdi",
+"oslibgdi",
+"winaccel",
+"win32wbasepos",
+"oslibres",
+"dc",
+"timer",
+"caret",
+"resource",
+"winproc",
+"text",
+"oslibmsgtranslate",
+"windlgmsg",
+"windlg",
+"win32wdesktop",
+"win32wbasenonclient",
+"win32wbaseprop",
+"dcrgn",
+"message",
+"trace",
+"property",
+"rect",
+"paint",
+"dragdrop",
+"oslibclip",
+"oslibkbd",
+"win32wfake"
+controls with this source file names
+"controls",
+"button",
+"static",
+"scroll",
+"listbox",
+"menu",
+"combo",
+"edit",
+"winswitch",
+"icontitle",
+"initterm",
+"trace",
+"dialog"
+uxtheme with this source file names
+"uxtheme"
+vdmdbg with this source file names
+"vdmdbg"
+version with this source file names
+"info",
+"install",
+"resource"
+winmm with this source file names
+"os2timer",
+"waveout",
+"waveoutdart",
+"time",
+"wavein",
+"auxiliary",
+"auxos2",
+"mixer",
+"midi",
+"irtmidi",
+"midistrm",
+"initterm",
+"mci",
+"joy",
+"mmio",
+"driver",
+"playsound",
+"joyos2",
+"resource",
+"waveindart",
+"waveoutdaud",
+"waveoutbase",
+"waveinoutbase"
+ws2_32 with this source file names
+"initterm",
+"ws2_32"
+wsock32 with this source file names
+"initterm",
+"wsastruct",
+"wsock32",
+"unknown",
+"async",
+"asyncthread",
+"wsa"
 
 3.0 ODIN Profiler
 ~~~~~~~~~~~~~~~~~
